--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -59,9 +59,15 @@
       <HintPath>..\packages\SharpFont.4.0.1\lib\net45\SharpFont.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Soul.Core">
+      <HintPath>Libraries\Soul\Soul.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Soul.Logging">
       <HintPath>Libraries\Soul\Soul.Logging.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+    </Reference>
+    <Reference Include="Soul.Utilities">
+      <HintPath>Libraries\Soul\Soul.Utilities.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <EmbedInteropTypes>False</EmbedInteropTypes>
@@ -107,6 +113,8 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Sound\SourceBase.cs" />
+    <Compile Include="src\Sound\StreamingSource.cs" />
     <Compile Include="src\Utils\CurrentPlatform.cs" />
     <Compile Include="src\Engine\ThreadManager.cs" />
     <Compile Include="src\Game\Animation\AnimatedTexture.cs" />
@@ -157,7 +165,6 @@
     <Compile Include="src\Input\Input.cs" />
     <Compile Include="src\GLES\Renderer.cs" />
     <Compile Include="Libraries\Windows.cs" />
-    <Compile Include="src\Utils\GameMath.cs" />
     <Compile Include="src\Game\Camera\CameraBase.cs" />
     <Compile Include="src\Primitives\Transform.cs" />
     <Compile Include="src\Game\Camera\TargetCamera.cs" />
