--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -126,6 +126,7 @@
     <Compile Include="src\Graphics\Renderer.cs" />
     <Compile Include="src\Graphics\Host\IHost.cs" />
     <Compile Include="src\Graphics\Host\Window.cs" />
+    <Compile Include="src\Graphics\Rendering\MapBuffer.cs" />
     <Compile Include="src\Graphics\VertexData.cs" />
     <Compile Include="src\Primitives\Matrix4.cs" />
     <Compile Include="src\Primitives\Vector3.cs" />
@@ -231,7 +232,6 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="src\Graphics\Helpers.cs" />
-    <Compile Include="src\TestMain.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\x86\FreeImage.dll">
@@ -248,9 +248,7 @@
     </Content>
     <Compile Include="src\Primitives\Vector4.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="src\Graphics\System\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
