--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -126,7 +126,7 @@
     <Compile Include="src\Graphics\Renderer.cs" />
     <Compile Include="src\Graphics\Host\IHost.cs" />
     <Compile Include="src\Graphics\Host\Window.cs" />
-    <Compile Include="src\Graphics\Rendering\MapBuffer.cs" />
+    <Compile Include="src\Graphics\MapBuffer.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
     <Compile Include="src\Graphics\VertexData.cs" />
     <Compile Include="src\Primitives\Matrix4.cs" />
