--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -125,8 +125,8 @@
     <Compile Include="src\Graphics\GLES\VertexArray.cs" />
     <Compile Include="src\Graphics\Renderable2D.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
-    <Compile Include="src\Graphics\Host\IHost.cs" />
-    <Compile Include="src\Graphics\Host\Window.cs" />
+    <Compile Include="src\Host\IHost.cs" />
+    <Compile Include="src\Host\Window.cs" />
     <Compile Include="src\Graphics\MapBuffer.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
     <Compile Include="src\Graphics\VertexData.cs" />
@@ -143,29 +143,25 @@
     <Compile Include="src\IO\SoundFile.cs" />
     <Compile Include="src\IO\TextFile.cs" />
     <Compile Include="src\IO\Other.cs" />
-    <Compile Include="src\GLES\RenderTarget.cs" />
-    <Compile Include="src\GLES\GlProgram.cs" />
-    <Compile Include="src\GLES\Shader.cs" />
-    <Compile Include="src\GLES\VAO.cs" />
-    <Compile Include="src\GLES\VBO.cs" />
+    <Compile Include="src\Graphics\Legacy\RenderTarget.cs" />
     <Compile Include="src\Engine\ContextObject.cs" />
-    <Compile Include="src\GLES\ITexture.cs" />
+    <Compile Include="src\Graphics\Legacy\ITexture.cs" />
     <Compile Include="src\Debug\MessageSource.cs" />
     <Compile Include="src\Debug\MessageType.cs" />
-    <Compile Include="src\GLES\WindowMode.cs" />
+    <Compile Include="src\Host\WindowMode.cs" />
     <Compile Include="src\Game\Layering\LayerManager.cs" />
     <Compile Include="src\Game\Layering\Layer.cs" />
     <Compile Include="src\Engine\ScriptingEngine.cs" />
-    <Compile Include="src\Game\Text\RichText.cs" />
-    <Compile Include="src\Game\AStar\Path.cs" />
-    <Compile Include="src\Game\AStar\Grid.cs" />
-    <Compile Include="src\Game\AStar\Node.cs" />
-    <Compile Include="src\Game\UI\ScreenFader.cs" />
-    <Compile Include="src\Game\UI\ScrollInputSelector.cs" />
-    <Compile Include="src\Game\UI\ScrollInput.cs" />
-    <Compile Include="src\Game\UI\Control.cs" />
-    <Compile Include="src\Game\UI\Controller.cs" />
-    <Compile Include="src\Game\UI\Panel.cs" />
+    <None Include="src\Game\Text\RichText.cs" />
+    <None Include="src\Game\AStar\Path.cs" />
+    <None Include="src\Game\AStar\Grid.cs" />
+    <None Include="src\Game\AStar\Node.cs" />
+    <None Include="src\Game\UI\ScreenFader.cs" />
+    <None Include="src\Game\UI\ScrollInputSelector.cs" />
+    <None Include="src\Game\UI\ScrollInput.cs" />
+    <None Include="src\Game\UI\Control.cs" />
+    <None Include="src\Game\UI\Controller.cs" />
+    <None Include="src\Game\UI\Panel.cs" />
     <Compile Include="src\Game\Text\TextEffect.cs" />
     <Compile Include="src\Sound\SoundFadeOut.cs" />
     <Compile Include="src\Sound\SoundFadeIn.cs" />
@@ -175,19 +171,16 @@
     <Compile Include="src\Sound\Source.cs" />
     <Compile Include="src\Utils\Helpers.cs" />
     <Compile Include="src\IO\Font.cs" />
-    <Compile Include="src\IO\Texture.cs" />
     <Compile Include="src\IO\AssetLoader.cs" />
-    <Compile Include="src\GLES\Text\TextDrawingSession.cs" />
-    <Compile Include="src\GLES\Window.cs" />
+    <None Include="src\GLES\Text\TextDrawingSession.cs" />
     <Compile Include="src\Engine\Context.cs" />
     <Compile Include="src\Input\MouseKeys.cs" />
     <Compile Include="src\Input\Input.cs" />
-    <Compile Include="src\GLES\Renderer.cs" />
     <Compile Include="Libraries\Windows.cs" />
     <Compile Include="src\Game\Camera\CameraBase.cs" />
     <Compile Include="src\Game\Camera\TargetCamera.cs" />
     <Compile Include="src\Game\Camera\MouseCamera.cs" />
-    <Compile Include="src\Game\Tiled\Map.cs" />
+    <None Include="src\Game\Tiled\Map.cs" />
     <Compile Include="src\Engine\Settings.cs" />
     <Compile Include="src\Game\Tiled\AnimatedTile.cs" />
     <Compile Include="src\Primitives\Color.cs" />
