--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -95,6 +95,10 @@
     <When Condition="$(DefineConstants.Contains('GLES'))" />
   </Choose>
   <ItemGroup>
+    <Compile Include="Libraries\FreeType-GL\Constants.cs" />
+    <Compile Include="Libraries\FreeType-GL\FreetypeGL.cs" />
+    <Compile Include="Libraries\FreeType-GL\texture-atlas.cs" />
+    <Compile Include="Libraries\FreeType-GL\texture-font.h.cs" />
     <Compile Include="Libraries\TiledSharp\ImageLayer.cs" />
     <Compile Include="Libraries\TiledSharp\Layer.cs" />
     <Compile Include="Libraries\TiledSharp\Map.cs" />
@@ -123,8 +127,10 @@
     <Compile Include="src\Graphics\GLES\ShaderProgram.cs" />
     <Compile Include="src\Graphics\GLES\Buffer.cs" />
     <Compile Include="src\Graphics\GLES\VertexArray.cs" />
+    <Compile Include="src\Graphics\Label.cs" />
     <Compile Include="src\Graphics\Renderable2D.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
+    <Compile Include="src\Graphics\Text\Font.cs" />
     <Compile Include="src\Host\IHost.cs" />
     <Compile Include="src\Host\Window.cs" />
     <Compile Include="src\Graphics\MapBuffer.cs" />
@@ -132,6 +138,7 @@
     <Compile Include="src\Graphics\VertexData.cs" />
     <Compile Include="src\IO\Asset.cs" />
     <Compile Include="src\Primitives\Matrix4.cs" />
+    <Compile Include="src\Primitives\Transform.cs" />
     <Compile Include="src\Primitives\Vector3.cs" />
     <Compile Include="src\Sound\SourceBase.cs" />
     <Compile Include="src\Sound\StreamingSource.cs" />
@@ -225,7 +232,6 @@
     <None Include="SharpFont.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <Compile Include="src\Graphics\Helpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\x86\FreeImage.dll">
