--- a/EmotionSandbox/EmotionSandbox.csproj
+++ b/EmotionSandbox/EmotionSandbox.csproj
@@ -31,7 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>EmotionSandbox.Examples.NewRenderer</StartupObject>
+    <StartupObject>EmotionSandbox.Examples.Rendering.RenderingText</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Emotion.ico</ApplicationIcon>
@@ -53,8 +53,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Examples\Input.cs" />
-    <Compile Include="Examples\LoadingScreen.cs" />
-    <Compile Include="Examples\NewRenderer.cs" />
+    <Compile Include="Examples\Generic\LoadingScreen.cs" />
+    <Compile Include="Examples\Rendering\RenderingMany.cs" />
+    <Compile Include="Examples\Rendering\RenderingText.cs" />
+    <Compile Include="Examples\Rendering\RenderingTextures.cs" />
+    <Compile Include="Examples\Rendering\RenderingRectangles.cs" />
     <None Include="Examples\RenderingText.cs" />
     <None Include="Examples\Rendering.cs" />
     <None Include="Examples\StreamingSound.cs" />
@@ -87,6 +90,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\ElectricSleepMainMenu.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\EmotionLogo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\LoadingCircleHalf.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Assets\test.png">
