--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Graphics\Batching\QuadMapBuffer.cs" />
     <Compile Include="src\Graphics\GLES\Texture.cs" />
     <Compile Include="src\Graphics\GLES\IGLObject.cs" />
     <Compile Include="src\Graphics\GLES\IndexBuffer.cs" />
@@ -123,15 +124,18 @@
     <Compile Include="src\Graphics\GLES\ShaderProgram.cs" />
     <Compile Include="src\Graphics\GLES\Buffer.cs" />
     <Compile Include="src\Graphics\GLES\VertexArray.cs" />
-    <Compile Include="src\Graphics\Label.cs" />
-    <Compile Include="src\Graphics\Renderable2D.cs" />
+    <Compile Include="src\Graphics\Batching\LineMapBuffer.cs" />
+    <Compile Include="src\Graphics\Renderable.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
     <Compile Include="src\Graphics\Text\Atlas.cs" />
     <Compile Include="src\Graphics\Text\Font.cs" />
     <Compile Include="src\Graphics\Text\Glyph.cs" />
+    <Compile Include="src\Graphics\Text\RichText.cs" />
+    <Compile Include="src\Graphics\Text\TextAlignment.cs" />
+    <Compile Include="src\Graphics\Text\TextEffect.cs" />
     <Compile Include="src\Host\IHost.cs" />
     <Compile Include="src\Host\Window.cs" />
-    <Compile Include="src\Graphics\MapBuffer.cs" />
+    <Compile Include="src\Graphics\Batching\MapBuffer.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
     <Compile Include="src\Graphics\VertexData.cs" />
     <Compile Include="src\IO\Asset.cs" />
@@ -175,7 +179,7 @@
     <Compile Include="src\Sound\SoundManager.cs" />
     <Compile Include="src\Sound\Source.cs" />
     <Compile Include="src\Utils\Helpers.cs" />
-    <Compile Include="src\IO\Font.cs" />
+    <None Include="src\IO\Font.cs" />
     <Compile Include="src\IO\AssetLoader.cs" />
     <None Include="src\GLES\Text\TextDrawingSession.cs" />
     <Compile Include="src\Engine\Context.cs" />
