--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -137,7 +137,7 @@
     <Compile Include="src\Host\Window.cs" />
     <Compile Include="src\Graphics\Batching\MapBuffer.cs" />
     <Compile Include="src\Graphics\TransformationStack.cs" />
-    <Compile Include="src\Graphics\VertexData.cs" />
+    <Compile Include="src\Graphics\Batching\VertexData.cs" />
     <Compile Include="src\IO\Asset.cs" />
     <Compile Include="src\Primitives\Matrix4.cs" />
     <Compile Include="src\Primitives\Transform.cs" />
