--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -116,7 +116,7 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Graphics\Text\TypewriterRichText.cs" />
+    <Compile Include="src\Game\Text\TypewriterRichText.cs" />
     <Compile Include="src\Graphics\Batching\QuadMapBuffer.cs" />
     <Compile Include="src\Graphics\GLES\Texture.cs" />
     <Compile Include="src\Graphics\GLES\IGLObject.cs" />
@@ -131,7 +131,7 @@
     <Compile Include="src\Graphics\Text\Atlas.cs" />
     <Compile Include="src\Graphics\Text\Font.cs" />
     <Compile Include="src\Graphics\Text\Glyph.cs" />
-    <Compile Include="src\Graphics\Text\RichText.cs" />
+    <Compile Include="src\Game\Text\RichText.cs" />
     <Compile Include="src\Graphics\Text\TextAlignment.cs" />
     <Compile Include="src\Graphics\Text\TextEffect.cs" />
     <Compile Include="src\Host\IHost.cs" />
