--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -161,9 +161,12 @@
     <Compile Include="src\Game\Layering\LayerManager.cs" />
     <Compile Include="src\Game\Layering\Layer.cs" />
     <Compile Include="src\Engine\ScriptingEngine.cs" />
-    <None Include="src\Game\AStar\Path.cs" />
-    <None Include="src\Game\AStar\Grid.cs" />
-    <None Include="src\Game\AStar\Node.cs" />
+    <Compile Include="src\Game\AStar\Path.cs" />
+    <Compile Include="src\Game\AStar\Grid.cs" />
+    <Compile Include="src\Game\AStar\Node.cs" />
+    <None Include="Assets\debugFont.otf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="src\Game\UI\ScreenFader.cs" />
     <None Include="src\Game\UI\ScrollInputSelector.cs" />
     <None Include="src\Game\UI\ScrollInput.cs" />
@@ -177,7 +180,6 @@
     <Compile Include="src\Sound\SoundManager.cs" />
     <Compile Include="src\Sound\Source.cs" />
     <Compile Include="src\Utils\Helpers.cs" />
-    <None Include="src\IO\Font.cs" />
     <Compile Include="src\IO\AssetLoader.cs" />
     <Compile Include="src\Engine\Context.cs" />
     <Compile Include="src\Input\MouseKeys.cs" />
@@ -186,7 +188,7 @@
     <Compile Include="src\Game\Camera\CameraBase.cs" />
     <Compile Include="src\Game\Camera\TargetCamera.cs" />
     <Compile Include="src\Game\Camera\MouseCamera.cs" />
-    <None Include="src\Game\Tiled\Map.cs" />
+    <Compile Include="src\Game\Tiled\Map.cs" />
     <Compile Include="src\Engine\Settings.cs" />
     <Compile Include="src\Game\Tiled\AnimatedTile.cs" />
     <Compile Include="src\Primitives\Color.cs" />
