Many Changes, UI Layouting
Added UI Layout objects which help you position your UI.
Moved the debug mouse drawing to the renderer.
Host creation errors will now be passed down.
The asset loader will now be loaded before the renderer, and will be loaded first.
Added frame by frame mode.
Added fps counter.
Added BasicText, BasicTextBg and BasicButton UI components.
Made the UI controller and asset loader thread safe.
Removed the GLES.Buffer logging.
#28 Fixed the MeasureString function returning very low amount for text which is a single line. This is a workaround.

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -117,6 +117,12 @@
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\Game\Text\TypewriterRichText.cs" />
+    <Compile Include="src\Game\UI\BasicTextBg.cs" />
+    <Compile Include="src\Game\UI\BasicText.cs" />
+    <Compile Include="src\Game\UI\Layout\CenterAnchor.cs" />
+    <Compile Include="src\Game\UI\Layout\LayoutControl.cs" />
+    <Compile Include="src\Game\UI\Layout\CornerAnchor.cs" />
+    <Compile Include="src\Game\UI\BasicButton.cs" />
     <Compile Include="src\Graphics\Batching\QuadMapBuffer.cs" />
     <Compile Include="src\Graphics\GLES\Texture.cs" />
     <Compile Include="src\Graphics\GLES\IGLObject.cs" />
