--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -123,6 +123,7 @@
     <Compile Include="src\Game\UI\Layout\LayoutControl.cs" />
     <Compile Include="src\Game\UI\Layout\CornerAnchor.cs" />
     <Compile Include="src\Game\UI\BasicButton.cs" />
+    <Compile Include="src\Game\UI\ParentControl.cs" />
     <Compile Include="src\Graphics\Batching\QuadMapBuffer.cs" />
     <Compile Include="src\Graphics\GLES\Texture.cs" />
     <Compile Include="src\Graphics\GLES\IGLObject.cs" />
@@ -133,7 +134,7 @@
     <Compile Include="src\Graphics\GLES\VertexArray.cs" />
     <Compile Include="src\Graphics\Batching\LineMapBuffer.cs" />
     <Compile Include="src\Graphics\TransformRenderable.cs" />
-    <Compile Include="src\Graphics\Renderable.cs" />
+    <Compile Include="src\Graphics\IRenderable.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
     <Compile Include="src\Graphics\Text\Atlas.cs" />
     <Compile Include="src\Graphics\Text\Font.cs" />
