--- a/EmotionSandbox/EmotionSandbox.csproj
+++ b/EmotionSandbox/EmotionSandbox.csproj
@@ -62,6 +62,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SoundPlayer\SoundPlayerScene.cs" />
+    <None Include="Assets\SoundPlayer\RobotoFont.woff2" />
     <None Include="Examples\Input.cs" />
     <Compile Include="Examples\Generic\LoadingScreen.cs" />
     <Compile Include="Examples\Rendering\RenderingMany.cs" />
@@ -108,6 +110,7 @@
     <Content Include="Assets\LoadingCircleHalf.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Assets\SoundPlayer\playButton.png" />
     <Content Include="Assets\test.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
