--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -132,7 +132,7 @@
     <Compile Include="src\Graphics\GLES\ShaderProgram.cs" />
     <Compile Include="src\Graphics\GLES\Buffer.cs" />
     <Compile Include="src\Graphics\GLES\VertexArray.cs" />
-    <Compile Include="src\Graphics\Batching\LineMapBuffer.cs" />
+    <None Include="src\Graphics\Batching\LineMapBuffer.cs" />
     <Compile Include="src\Graphics\TransformRenderable.cs" />
     <Compile Include="src\Graphics\IRenderable.cs" />
     <Compile Include="src\Graphics\Renderer.cs" />
