--- a/EmotionSandbox/EmotionSandbox.csproj
+++ b/EmotionSandbox/EmotionSandbox.csproj
@@ -20,6 +20,7 @@
     <DefineConstants>TRACE;DEBUG;GLES</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release-GLES|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
