Fixed Mono on Windows, fixed the MapBuffer causing crashes on strict hardware like AMD.

--- a/EmotionCore/SharpFont.dll.config
+++ b/EmotionCore/SharpFont.dll.config
@@ -3,4 +3,5 @@
 <configuration>
   <dllmap dll="freetype6" os="linux" target="./Libraries/x64/freetype.so" />
   <dllmap dll="freetype6" os="osx" target="./Libraries/x64/libfreetype.6.dylib" />
+  <dllmap dll="freetype6" os="windows" target="./Libraries/x64/freetype6.dll" />
 </configuration>
