--- a/EmotionSandbox/EmotionSandbox.csproj
+++ b/EmotionSandbox/EmotionSandbox.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>EmotionSandbox.Examples.Rendering.RenderingMany</StartupObject>
+    <StartupObject>EmotionSandbox.Examples.Rendering.RenderingText</StartupObject>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Emotion.ico</ApplicationIcon>
