--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -155,7 +155,7 @@
     <Compile Include="src\Sound\SourceBase.cs" />
     <Compile Include="src\Sound\StreamingSource.cs" />
     <Compile Include="src\Utils\CurrentPlatform.cs" />
-    <Compile Include="src\System\ThreadManager.cs" />
+    <Compile Include="src\Engine\ThreadManager.cs" />
     <Compile Include="src\Game\Animation\AnimatedTexture.cs" />
     <Compile Include="src\Game\Animation\AnimationLoopType.cs" />
     <Compile Include="src\IO\SoundFile.cs" />
@@ -166,7 +166,7 @@
     <Compile Include="src\Host\WindowMode.cs" />
     <Compile Include="src\Game\Layering\LayerManager.cs" />
     <Compile Include="src\Game\Layering\Layer.cs" />
-    <Compile Include="src\System\ScriptingEngine.cs" />
+    <Compile Include="src\Engine\ScriptingEngine.cs" />
     <Compile Include="src\Game\AStar\Path.cs" />
     <Compile Include="src\Game\AStar\Grid.cs" />
     <Compile Include="src\Game\AStar\Node.cs" />
@@ -187,7 +187,7 @@
     <Compile Include="src\Sound\Source.cs" />
     <Compile Include="src\Utils\Helpers.cs" />
     <Compile Include="src\IO\AssetLoader.cs" />
-    <Compile Include="src\System\Context.cs" />
+    <Compile Include="src\Engine\Context.cs" />
     <Compile Include="src\Input\MouseKeys.cs" />
     <Compile Include="src\Input\InputManager.cs" />
     <Compile Include="Libraries\Windows.cs" />
@@ -195,7 +195,7 @@
     <Compile Include="src\Game\Camera\TargetCamera.cs" />
     <Compile Include="src\Game\Camera\MouseCamera.cs" />
     <Compile Include="src\Game\Tiled\Map.cs" />
-    <Compile Include="src\System\Settings.cs" />
+    <Compile Include="src\Engine\Settings.cs" />
     <Compile Include="src\Game\Tiled\AnimatedTile.cs" />
     <Compile Include="src\Primitives\Color.cs" />
     <Compile Include="src\Primitives\Rectangle.cs" />
