Sound rework, Sound Demo, Threading Improvements, Bug Fixes
Fixed a bug where the settings object was overwritten at every draw.
Reworked the audio system.
 - It now runs on a seperate thread.
 - All sources are streaming sources.
 - FadeIn/FadeOut built in into layer.
 - Custom looping implementation.
 - Buffer duration and playback location.
Reworked the ThreadManager class into a ALThread and GLThread classes and moved them to the new Threading namespace.
ParentControls will no longer block the events of their children when their children have a Z value of 0.
Code Style applied.

--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\Threading\ALThread.cs" />
+    <Compile Include="src\Engine\Threading\ThreadManager.cs" />
     <Compile Include="src\Game\Text\TypewriterRichText.cs" />
     <Compile Include="src\Game\UI\BasicTextBg.cs" />
     <Compile Include="src\Game\UI\BasicText.cs" />
@@ -152,10 +154,9 @@
     <Compile Include="src\Primitives\Point.cs" />
     <Compile Include="src\Primitives\Transform.cs" />
     <Compile Include="src\Primitives\Vector3.cs" />
-    <Compile Include="src\Sound\SourceBase.cs" />
-    <Compile Include="src\Sound\StreamingSource.cs" />
+    <Compile Include="src\Sound\SoundStatus.cs" />
     <Compile Include="src\Utils\CurrentPlatform.cs" />
-    <Compile Include="src\Engine\ThreadManager.cs" />
+    <Compile Include="src\Engine\Threading\GLThread.cs" />
     <Compile Include="src\Game\Animation\AnimatedTexture.cs" />
     <Compile Include="src\Game\Animation\AnimationLoopType.cs" />
     <Compile Include="src\IO\SoundFile.cs" />
@@ -179,12 +180,8 @@
     <Compile Include="src\Game\UI\Control.cs" />
     <Compile Include="src\Game\UI\Controller.cs" />
     <Compile Include="src\Game\UI\Panel.cs" />
-    <Compile Include="src\Sound\SoundFadeOut.cs" />
-    <Compile Include="src\Sound\SoundFadeIn.cs" />
-    <Compile Include="src\Sound\SoundEffect.cs" />
     <Compile Include="src\Sound\SoundLayer.cs" />
     <Compile Include="src\Sound\SoundManager.cs" />
-    <Compile Include="src\Sound\Source.cs" />
     <Compile Include="src\Utils\Helpers.cs" />
     <Compile Include="src\IO\AssetLoader.cs" />
     <Compile Include="src\Engine\Context.cs" />
