Added documentation for the AnimatedTexture class, moved CurrentFrame to a property from a function, and added an Animation example.

--- a/EmotionSandbox/EmotionSandbox.csproj
+++ b/EmotionSandbox/EmotionSandbox.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Examples\DocExample.cs" />
     <Compile Include="Examples\ExampleStart.cs" />
+    <Compile Include="Examples\GameLogic\Animation.cs" />
     <Compile Include="SoundPlayer\PlayerVolumeControl.cs" />
     <Compile Include="SoundPlayer\SoundPlayerScene.cs" />
     <Compile Include="Examples\Generic\ClickableLabel.cs" />
