Fixed version placeholder for nuspec.
It seems that even when you use a version argument for the pack command it still checks the version node.

--- a/EmotionCore/EmotionCore.nuspec
+++ b/EmotionCore/EmotionCore.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Emotion</id>
-    <version>$ver$</version>
+    <version>0</version>
     <title>Emotion Engine Debug</title>
     <authors>Vlad 'Cryru' Abadzhiev</authors>
     <owners>Vlad 'Cryru' Abadzhiev</owners>
