--- a/EmotionCore/EmotionCore.csproj
+++ b/EmotionCore/EmotionCore.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Libraries\TiledSharp\zlib\ZlibStream.cs" />
     <Compile Include="Libraries\Unix.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="src\Engine\ContinuousAction.cs" />
     <Compile Include="src\Engine\Threading\ALThread.cs" />
     <Compile Include="src\Engine\Threading\ThreadManager.cs" />
     <Compile Include="src\Game\Text\TypewriterRichText.cs" />
